Progress with CLickHouse Arrow